--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'JC'
 - !lcsh 'Federal government'
+- GITenberg
 title: O Federalismo
 url: http://www.gutenberg.org/ebooks/25690
